--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.suffix=.jsp
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/bs_23_assignment?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = sam123
+spring.datasource.password = 
 
 
 ## Hibernate Properties
